--- a/.env.local
+++ b/.env.local
@@ -1,7 +1,7 @@
 # For Studio Locally
-SANITY_STUDIO_API_PROJECT_ID = "your_project_id"
+SANITY_STUDIO_API_PROJECT_ID = "y85b2zbm"
 SANITY_STUDIO_API_DATASET = "production"
 
 # For Next Locally
-NEXT_PUBLIC_SANITY_PROJECT_ID = "your_project_id"
+NEXT_PUBLIC_SANITY_PROJECT_ID = "y85b2zbm"
 NEXT_PUBLIC_SANITY_DATASET = "production"
