--- a/package.json
+++ b/package.json
@@ -28,6 +28,11 @@
     "lerna": "^3.22.1",
     "postcss-flexbugs-fixes": "4.2.1",
     "postcss-preset-env": "^6.7.0",
+    "@chakra-ui/icons": "^1.0.0",
+    "@chakra-ui/react": "^1.0.0",
+    "@emotion/react": "^11.0.0",
+    "@emotion/styled": "^11.0.0",
+    "framer-motion": "^2.9.4",
     "prettier": "^2.1.2",
     "sanity-template": "^2.1.1",
     "tailwindcss": "^1.9.6"
